fix(NP-1164): various bug fixes  --link-modal - item.css,main.css,ittItemDetailModal.js - tweak styles to enlarge available space for modal  --embed pausing timeline - use pauseOtherPlayers when seeking to prevent embed player from pausing main player when coming back into context.  --video overlays - overlay for main video completely covers video, prohibiting any user interaction with the underlying video.

--- a/app/styles/item.css
+++ b/app/styles/item.css
@@ -309,9 +309,10 @@ Inline images (TODO show these only when image is larger than available space) *
 	max-height: calc(100% - 100px);
 	position: fixed;
 	width: 75%;
-	top: 40%;
+	top: 30%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	height: 80%;
+	transform: translate(-50%, -40%);
 }
 
 .modal.ng-enter,
